--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover real-time cryptocurrency prices and stay ahead of the market with our advanced cryptocurrency quote generator. Get instant quotes for popular cryptocurrencies, track price fluctuations, and make informed investment decisions. Start using our intuitive cryptocurrency quoting tool today and take control of your digital asset portfolio.">
     <title>Cryptocurrency Quote</title>
+    <meta name="description" content="Discover real-time cryptocurrency prices, track market trends, and make informed investment decisions with our comprehensive crypto quote calculator. Stay up-to-date with the latest market data, compare prices across multiple exchanges, and explore the vast world of digital assets with our user-friendly crypto quoting tool. Empower your crypto portfolio with accurate information and seize opportunities in this dynamic and exciting market. Start quoting and stay ahead of the game with our crypto price calculator.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
